src/test/resources/stakeholders/invalid/missing/src/main/requirements/JustDoIt.useCase
package nonuser

useCase JustDoIt {
    display = "Just do it"
}

scenario HappyPath {
    description = "All's well that ends well"
    steps       = [
        Person(Micky),
        Command(DoIt),
        Aggregate(System)
    ]
}
